<resources>
    <string name="app_name">Lets Race</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="on_off">ON/OFF</string>
    <string name="lets_race">Lets Race!!!!!</string>
    <string name="application_settings">Application settings</string>
    <string name="sms_text_messaging">SMS Text Messaging</string>
    <string name="settings">Settings</string>
</resources>